--- a/ProjectLunarPhase/ProjectLunarPhase.vcxproj
+++ b/ProjectLunarPhase/ProjectLunarPhase.vcxproj
@@ -74,8 +74,8 @@
     <LibraryPath>C:\Program Files (x86)\MySQL\MySQL Connector C 6.1\lib\vs14;C:\SFNUL\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\mysql-connector-c-6.1\include;C:\SFNUL\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>C:\mysql-connector-c-6.1\lib\vs14;C:\SFNUL\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\mysql-connector-c-6.1\include;C:\SFML-2.5.0\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\mysql-connector-c-6.1\lib\vs14;C:\SFML-2.5.0\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -105,17 +105,18 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <LanguageStandard>stdcpp17</LanguageStandard>
-      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_UNICODE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SFML_STATIC;_CRT_SECURE_NO_WARNINGS;_UNICODE;UNICODE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>mysqlclient.lib;sfnul-s.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>mysqlclient.lib;sfml-network-s.lib;sfml-system-s.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -132,6 +133,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SFNUL\HTTP.cpp" />
     <ClInclude Include="DatabaseHandler.hpp" />
     <ClInclude Include="HTTPParser.hpp" />
     <ClInclude Include="HTTPResponseWrapper.hpp" />
@@ -145,6 +147,8 @@
     <ClInclude Include="MySql\MySqlException.hpp" />
     <ClInclude Include="MySql\MySqlPreparedStatement.hpp" />
     <ClInclude Include="MySql\OutputBinder.hpp" />
+    <ClInclude Include="SFNUL\Config.hpp" />
+    <ClInclude Include="SFNUL\HTTP.hpp" />
     <ClInclude Include="StringParser.hpp" />
     <ClInclude Include="Version.hpp" />
   </ItemGroup>
